--- a/LearningSystem.Web/LearningSystem.Web/Views/_ViewImports.cshtml
+++ b/LearningSystem.Web/LearningSystem.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using LearningSystem.Data.Models
 @using LearningSystem.Web
 @using LearningSystem.Web.Models
 @using LearningSystem.Web.Models.AccountViewModels
