--- a/LearningSystem.Web/LearningSystem.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/LearningSystem.Web/LearningSystem.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,8 +1,3 @@
-@using Microsoft.AspNetCore.Identity
 @using LearningSystem.Data.Models
-@using LearningSystem.Services.Admin.Models
-@using LearningSystem.Web
-@using LearningSystem.Web.Models
-@using LearningSystem.Web.Models.AccountViewModels
-@using LearningSystem.Web.Models.ManageViewModels
+@using LearningSystem.Web.Areas.Admin.Models.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
