--- a/LearningSystem.Web/LearningSystem.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/LearningSystem.Web/LearningSystem.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using LearningSystem.Data.Models
+@using LearningSystem.Web.Areas.Admin.Models.Courses
 @using LearningSystem.Web.Areas.Admin.Models.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
